<resources>
    <string name="app_name">MyAudio</string>
    <string name="delete">Delete</string>
    <string name="Share">Share</string>
    <string name="Record">Record</string>
    <string name="StopRec">Stop</string>
    <string name="List">List</string>
    <string name="MyAudioApp">MyAudio</string>
    <string name="timerNumber">00:00:00</string>
    <string name="recordingName">recordingName</string>
    <string name="playListBTN">Play</string>
    <string name="description_for_image_button">descrizione</string>
    <string name="todo">TODO</string>
    <string name="condividi">condividi</string>
    <string name="rinomina">rinomina</string>
</resources>