<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">  <!-- Colore nero -->

        <!-- Altri elementi UI qui -->

        <Button
            android:id="@+id/sharebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="34dp"
            android:layout_marginBottom="30dp"
            android:layout_toEndOf="@+id/deletebtn"
            android:text="@string/Share" />

        <Button
            android:id="@+id/deletebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="30dp"
            android:text="@string/delete" />

        <Button
            android:id="@+id/listbtn"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="34dp"
            android:layout_marginBottom="30dp"
            android:layout_toEndOf="@+id/sharebtn"
            android:text="@string/List" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="151dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="67dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="513dp"
            android:text="@string/MyAudioApp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="611dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/timerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/timerNumber"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/recordbtn"
                android:layout_width="200dp"
                android:layout_height="62dp"
                android:text="@string/Record" />

        </LinearLayout>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>